--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "object-property-validator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
