--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-property-validator",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -12,6 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^3.8.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sumansarkarwd/object-property-validator"
   },
   "files": [
     "lib/**/*"
