--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "object-property-validator",
-  "version": "1.1.1",
-  "description": "",
+  "version": "1.1.2",
+  "description": "Object Property Validator is a simple plugin to validate javascript objects. It is inspired by Laravel validations.",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "keywords": [],
+  "keywords": ["Javascript validator", "Object validator", "Object Property Validator", "Javascript", "Laravel like validator"],
   "author": "Suman Sarkar",
   "license": "MIT",
   "devDependencies": {
