--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "object-property-validator",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Object Property Validator is a simple plugin to validate javascript objects. It is inspired by Laravel validations.",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
   },
-  "keywords": ["Javascript validator", "Object validator", "Object Property Validator", "Javascript", "Laravel like validator"],
+  "keywords": [
+    "Javascript validator",
+    "Object validator",
+    "Object Property Validator",
+    "Javascript",
+    "Laravel like validator"
+  ],
   "author": "Suman Sarkar",
   "license": "MIT",
   "devDependencies": {
